# swagger_codegen

./: .gitignore  .swagger_codegen.toml  .swagger_codegen.toml.example  Makefile  pyproject.toml  readme.md
.github/: dependabot.yml
.github/actions/poetry/: action.yml
.github/workflows/: continous-integration.yaml
example/: petstore_example.py
example/petstore/: __init__.py  client.py
example/petstore/apis/pet/: addPet.py  api.py  deletePet.py  findPetsByStatus.py  findPetsByTags.py  getPetById.py  updatePet.py  updatePetWithForm.py  uploadFile.py
example/petstore/apis/store/: api.py  deleteOrder.py  getInventory.py  getOrderById.py  placeOrder.py
example/petstore/apis/user/: api.py  createUser.py  createUsersWithListInput.py  deleteUser.py  getUserByName.py  loginUser.py  logoutUser.py  updateUser.py
src/swagger_codegen/api/: base.py  client.py  configuration.py  exceptions.py  json.py  request.py  response.py  response_deserializer.py  types.py
src/swagger_codegen/api/adapter/: aiohttp.py  base.py  httpx.py  params_converter.py  requests.py
src/swagger_codegen/cli/: config.py  imports.py  main.py  setup_logging.py  setup_renderer.py
src/swagger_codegen/parsing/: data_type.py  data_type_parser.py  endpoint.py  endpoint_request.py  endpoint_response.py  loaders.py  parse.py
src/swagger_codegen/render/: api.py  jinja_env.py  package_renderer.py  renderer.py  templates.py  test_utils.py  utils.py
src/swagger_codegen/render/post_processors/: blackify.py  post_processor.py
src/swagger_codegen/render/renderers/: distributable_package.py  installable_package.py  package.py
src/swagger_codegen/templates/package_renderer/: api.jinja2  client.jinja2  dto.jinja2  endpoint.jinja2  endpoint_imports.jinja2  manifest_in.jinja2  package_entrypoint.jinja2  readme.jinja2  setup_py.jinja2
tests/: test_adapters.py  test_data_type_parser.py  test_json.py  test_loaders.py  test_params_converter.py  test_response_deserializer.py  test_responses.py
tests/fixtures/: inline_defined_objects.json  input.json  input.yaml  minimal_example.json  test_openapi.json
tests/integration/: conftest.py  example_api.py  test_adapters.py  test_example_api.py
