[tool.poetry]
name = "swagger-codegen"
version = "0.1.15"
description = "Generate API clients by parsing Swagger definitions"
authors = ["asyncee"]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/asyncee/swagger_codegen"
repository = "https://github.com/asyncee/swagger_codegen"
documentation = "https://github.com/asyncee/swagger_codegen"
keywords = ["swagger-codegen", "openapi", "swagger", "pydantic"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.4"
multidict = "^4.7.5"
jinja2 = "^2.11.1"
click = "^7.1.1"
typer = "^0.1.1"
toml = "^0.10.0"
rich = "^0.8.11"
inflection = "^0.4.0"
schemathesis = "1.1.0"

aiohttp = { version = "*", optional = true }
requests = { version = "*", optional = true }
black = { version = "*", allow-prereleases = true, optional = true }

[tool.poetry.dev-dependencies]
rich = "^0.8.8"
requests-toolbelt = "^0.9.1"
pytest-aiohttp = "^0.3.0"
pytest-lazy-fixture = "^0.6.3"
mypy = "^0.782"
mypy-extensions = "^0.4.3"

[tool.poetry.extras]
sync = ["requests"]
async = ["aiohttp"]
black = ["black"]
all = ["aiohttp", "requests", "black"]

[tool.poetry.scripts]
swagger_codegen = 'swagger_codegen.cli.main:app'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

